# CapStone

./: README.md  index.html  params.json
.c9/: .nakignore
.c9/metadata/: tab0
3D Parts/: Part1.ipt  Part1.stl  Wheel_Coupler.dwg  Wheel_Coupler.ipt  Wheel_Coupler.stl  Wheel_Coupler_2.stl  Wheel_cap.ipt  Wheel_cap.stl  Wheel_cap_extended.ipt  Wheel_cap_extended.stl
3D Parts/OldVersions/: Wheel_Coupler.0002.ipt  Wheel_Coupler.0005.ipt  Wheel_cap.0003.ipt  Wheel_cap_extended.0001.ipt
Documentation/: Prototype 2.docx
Documentation/Budget/: Budge Microcontroller.docx  Budget Batteries.docx  Budget Decision Matrices and Justifications - Brian.docx  Budget Proposal for Roadie -  Alex.docx  Budget Proposal for Roadie.docx  Camera Budget.docx  Chasis Budget.docx  Final Budget.xlsx  Line  Following.docx  Motors Budget.docx  Motors Refernces and Pictures.docx  Movement Budget.docx  Parts Order.xlsx  Risk Analysis.docx  Robotic Claw Budget.docx  summaryMicroBatts.txt
Documentation/Class Presentations/: 2014 SECON Competition Proposal.pptx  Are We There Yet Progress Report 2.pptx  Are We There Yet Progress Report 3.pptx  Are We There Yet Progress Report 4 Revision.pptx  Are We There Yet Progress Report 4.pptx  Are We There Yet Progress Report 5.pptx  Are We There Yet Progress Report 6.pptx  QuickPitch.pptx  Requirements Presentation.pptx
Software/ComputerVision/Moments/: CMakeCache.txt  CMakeLists.txt  ContoursMoments  Makefile  Serial.cpp  SerialClass.h  WorkingCam  cam_working.cpp  cmake_install.cmake  moments_demo_cam.cpp  moments_demo_cam_working.cpp
(+53 files in other folders)
